# app/Http/Controllers/Employee/EmployeeController.php
@@ -4,6 +4,7 @@ namespace App\Http\Controllers\Employee;
 
 use App\Http\Controllers\Controller;
 use App\Http\Resources\EmployeeResource;
+use App\Http\Resources\PaginationResource;
 use App\Services\EmployeeService;
 use Illuminate\Http\Request;
 use Symfony\Component\HttpFoundation\Response;
@@ -29,12 +30,6 @@ class EmployeeController extends Controller
      *         @OA\Schema(type="string", default="all")
      *     ),
      *     @OA\Parameter(
-     *         name="paginate",
-     *         in="query",
-     *         required=false,
-     *         @OA\Schema(type="boolean", default=true)
-     *     ),
-     *     @OA\Parameter(
      *         name="per_page",
      *         in="query",
      *         required=false,
@@ -55,25 +50,24 @@ class EmployeeController extends Controller
     public function index(Request $request)
     {
         $type = $request->type;
+        $perPage = $request->per_page;
+        $page = $request->page;
         $data = [];
 
-        if ($request->paginate === true) {
-            $data = $this->service->paginate($request->per_page, $request->page);
-        } else {
-            switch ($type) {
-                case 'isIncluded':
-                    $data = $this->service->getIncludedEmployee();
-                    break;
+        switch ($type) {
+            case 'isIncluded':
+                $data = $this->service->getIncludedEmployee($perPage, $page);
+                break;
 
-                case 'isExcluded':
-                    $data = $this->service->getExcludedEmployee();
-                    break;
+            case 'isExcluded':
+                $data = $this->service->getExcludedEmployee($perPage, $page);
+                break;
 
-                default:
-                    $data = $this->service->getAll();
-                    break;
-            }
+            default:
+                $data = $this->service->paginate($perPage, $page);
+                break;
         }
+
 
         if (!$data) {
             return response()->json([
@@ -82,8 +76,10 @@ class EmployeeController extends Controller
             ], Response::HTTP_NOT_FOUND);
         }
 
+
         return response()->json([
             'data' => EmployeeResource::collection($data),
+            'meta' => new PaginationResource($data),
             'message' => 'Data successfully retrieved',
             'success' => true,
         ], Response::HTTP_OK);
